<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.virtualcastle.topgames.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="157dp"
            android:src="@drawable/games"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:textSize="30sp"
                android:id="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main_description"
                android:textColor="#fff"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="15dp"
                android:textSize="18sp"
                android:id="@+id/textView2" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_select"
            android:textColor="#fff"
            android:gravity="center"
            android:id="@+id/textView"
            android:textSize="18sp"
            android:layout_marginBottom="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/main_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_button1"
                android:background="@drawable/back_custom"
                android:textColor="@color/colorAccent"
                android:drawablePadding="10dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/main_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_button2"
                android:background="@drawable/back_custom"
                android:textColor="@color/colorAccent"
                android:drawablePadding="10dp"
                android:padding="10dp" />

            <Button
                android:id="@+id/main_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_button3"
                android:background="@drawable/back_custom"
                android:textColor="@color/colorAccent"
                android:drawablePadding="10dp"
                android:padding="10dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
