<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.virtualcastle.topgames.cardActivity"
    android:orientation="vertical"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/game_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_card"
                android:textSize="21sp"
                android:textColor="@color/colorAccent"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:text="@string/console"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/console"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:text="@string/rate_card"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rate"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:text="@string/fecha_card"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:paddingTop="5dp"
                android:paddingLeft="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="45dp">
            <Button
                android:onClick="goToList"
                android:id="@+id/card_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/card_button"
                android:background="@drawable/back_custom"
                android:textColor="@color/colorAccent"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:textSize="13sp"
               />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
